mi primera confirmación de actualización

--- a/about.html
+++ b/about.html
@@ -18,6 +18,11 @@
                   <li><a href="about.html">QUIENES SOMOS</a></li>
                 </ul>
               </nav>
+              <main>
+                <div class="greeting">
+                    estamos actualizando
+                </div>
+              </main>
               <h1>Acerca de</h1>
               <p>¡Bienvenido a nuestra página “Acerca de”! Aquí, aprenderás más sobre nuestra empresa y los servicios que ofrecemos.</p>
               <img src="imagen1.jpg" alt="imagen1" class="imagen1"/>
